# web-search-mcp-server

./: .env.example  README.md  pyproject.toml  requirements.txt
src/analyzer/: openai_analyzer.py
src/core/: types.py
src/core/factory/: analyzer_facrory.py  scraper_factory.py  searcher_factory.py
src/core/interface/: analyzer_interface.py  scraper_interface.py  searcher_interface.py
src/mcp_servers/: web_search_server.py
src/models/: analyzer_models.py  scrape_models.py  search_models.py
src/scraper/: trafilatura_scraper.py
src/searcher/: open_google_search.py
src/tools/: custom_domains_search_tool.py  custom_sites_search_tool.py  search_on_web_tool.py
src/utils/: url_validator.py
